--- a/midterm_project_script.Rmd
+++ b/midterm_project_script.Rmd
@@ -184,6 +184,14 @@ model.lda <- train(x, y,
                    trControl = ctrl)
 ```
 
+# Regression Tree
+
+# Support Vector Machine
+
+# Neural Network
+
+
+
 # Model Comparison
 
 ## CV Compare
