random forest update

--- a/midterm_project_script.Rmd
+++ b/midterm_project_script.Rmd
@@ -213,6 +213,8 @@ rf.fit <- train(covid_vaccination ~ . ,
                 trControl = rf.ctrl)
 
 ggplot(rf.fit, highlight = TRUE)
+
+rf.pred <- predict(rf.fit, newdata = dat[-rowTrain,], type = "prob")[,1]
 ```
 
 ## Support Vector Machine
