--- a/midterm_project_script.Rmd
+++ b/midterm_project_script.Rmd
@@ -190,26 +190,6 @@ train <- createDataPartition(y = dat$covid_vaccination,
                                 p = 0.7,
                                 list = FALSE)
 
-# Radial
-set.seed(1)
-radial.tune <- tune.svm(covid_vaccination ~ . , 
-                        data = dat[train,], 
-                        kernel = "radial", 
-                        cost = exp(seq(-1, 4,len=20)),
-                        gamma = exp(seq(-6,-2,len=20)))
-
-plot(radial.tune, transform.y = log, transform.x = log, 
-     color.palette = terrain.colors)
-# summary(radial.tune)
-
-best.radial <- radial.tune$best.model
-summary(best.radial)
-
-pred.radial <- predict(best.radial, newdata = dat[-train,])
-
-confusionMatrix(data = pred.radial, 
-                reference = dat$covid_vaccination[-train])
-
 # kernlab
 ctrl1 <- trainControl(method = "cv")
 set.seed(1)
@@ -221,9 +201,8 @@ svml.fit <- train(covid_vaccination ~ . ,
                   trControl = ctrl1)
 
 plot(svml.fit, highlight = TRUE, xTrans = log)
-```
+svml.fit$bestTune
 
-```{r}
 svmr.grid <- expand.grid(C = exp(seq(-1,4,len=20)),
                          sigma = exp(seq(-6,-2,len=20)))
 
@@ -239,6 +218,7 @@ myPar <- list(superpose.symbol = list(col = myCol),
               superpose.line = list(col = myCol))
 
 plot(svmr.fit, highlight = TRUE, par.settings = myPar)
+svmr.fit$bestTune
 ```
 
 
