--- a/midterm_project_script.Rmd
+++ b/midterm_project_script.Rmd
@@ -184,15 +184,12 @@ ggplot(rf.fit, highlight = TRUE)
 data$covid_vaccination <- factor(data$covid_vaccination, c("vacc", "no_vacc"))
 dat <- data[-c(5,8,10,11,17,18)]
 summary(dat)
-train <- createDataPartition(y = dat$covid_vaccination,
-                                p = 0.7,
-                                list = FALSE)
 
 # SVM with Linear Kernal
 ctrl1 <- trainControl(method = "cv")
 set.seed(1)
 svml.fit <- train(covid_vaccination ~ . , 
-                  data = dat[train,], 
+                  data = dat[rowTrain,], 
                   method = "svmLinear",
                   # preProcess = c("center", "scale"),
                   tuneGrid = data.frame(C = exp(seq(-5,2,len=50))),
@@ -207,12 +204,12 @@ svmr.grid <- expand.grid(C = exp(seq(-1,4,len=20)),
 
 set.seed(1)             
 svmr.fit <- train(covid_vaccination ~ . , dat, 
-                  subset = train,
+                  subset = rowTrain,
                   method = "svmRadialSigma",
                   tuneGrid = svmr.grid,
                   trControl = ctrl1)
 
-myCol<- rainbow(20)
+myCol <- rainbow(20)
 myPar <- list(superpose.symbol = list(col = myCol),
               superpose.line = list(col = myCol))
 
