--- a/final_project_script.Rmd
+++ b/final_project_script.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "DSII Midterm Project"
+title: "DSII Final Project"
 author: "Yiru Gong, yg2832; Yiwen Zhao, yz4187; Jiaqi Chen, jc5681"
 date: "`r Sys.Date()`"
 output:
